Implemented jwt
